--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@trendmicro/react-modal": "^3.0.0",
-    "antd": "^3.25.0",
-    "axios": "^0.19.0",
-    "bootstrap": "^4.3.1",
+    "@trendmicro/react-modal": "^3.1.0",
+    "antd": "^3.26.6",
+    "axios": "^0.19.1",
+    "bootstrap": "^4.4.1",
     "http-status-codes": "^1.4.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.9",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-sweetalert": "^4.4.1",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
-    "react-select": "^3.0.5",
-    "react-toastify": "^5.3.2",
+    "react-select": "^3.0.8",
+    "react-table": "^7.0.0-rc.15",
+    "react-toastify": "^5.5.0",
     "react-widgets": "^4.4.11"
   },
   "scripts": {
